--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>Epic Sample App, numba 1</h1>
+<p>
+    Home Page for Lord Kevin. He is learning from
+    <a href="http://www.railstutorial.org/">, Ruby On Rails Tutorial</a>
+    sample application, pretty epic
+</p>
