--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,18 @@
-<% provide(:title, "Home") %>
-<h1>Epic Sample App, numba 1</h1>
-<p>
+<div class="center jumbotron">
+  <h1>Welcome to Epic Sample App, numba 1 in the world</h1>
+
+  <h2>
+    This is the home page for Lord Kevin's sample application"
+  </h2>
+
+  <p>
     Home Page for Lord Kevin. He is learning from
-    <a href="http://www.railstutorial.org/">, Ruby On Rails Tutorial</a>
+    <a href="http://www.railstutorial.org/">Ruby On Rails Tutorial</a>
     sample application, pretty epic
-</p>
+  </p>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"),
+            'http://rubyonrails.org/' %>
