Finish user sign-up

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, "Help") %>
 <h1>Helpl! Help!</h1>
 <p>
-  Get help on RUby On Rails Tuorial at the
+  Get help on Ruby On Rails Tuorial at the
   <a href="http://www.railstutorial.org/#help">Rails Tutorial help section</a>.
   Lots of help there, by Michael Hartl.
   Love that guy for publishing <em>Ruby on Rails Tutorial</em> book.
+  I love cheeeeseburgers!
 </p>
